test/trivial/bradc/readmethod.chpl
proc main() {
  var gooResult = goo.read();
}
